Update based on spec.
