# model_domain.go
@@ -23,8 +23,8 @@ var _ MappedNullable = &Domain{}
 type Domain struct {
 	Id int32 `json:"id"`
 	Domain string `json:"domain"`
-	ProjectId int32 `json:"project_id"`
-	InSection int32 `json:"in_section"`
+	ProjectId *int32 `json:"project_id,omitempty"`
+	InSection *int32 `json:"in_section,omitempty"`
 	DnsEngaged int32 `json:"dns_engaged"`
 	SectionMessage *string `json:"section_message,omitempty"`
 	CreatedAt *string `json:"created_at,omitempty"`
@@ -38,12 +38,10 @@ type _Domain Domain
 // This constructor will assign default values to properties that have it defined,
 // and makes sure properties required by API are set, but the set of arguments
 // will change when the set of required properties is changed
-func NewDomain(id int32, domain string, projectId int32, inSection int32, dnsEngaged int32) *Domain {
+func NewDomain(id int32, domain string, dnsEngaged int32) *Domain {
 	this := Domain{}
 	this.Id = id
 	this.Domain = domain
-	this.ProjectId = projectId
-	this.InSection = inSection
 	this.DnsEngaged = dnsEngaged
 	return &this
 }
@@ -104,52 +102,68 @@ func (o *Domain) SetDomain(v string) {
 	o.Domain = v
 }
 
-// GetProjectId returns the ProjectId field value
+// GetProjectId returns the ProjectId field value if set, zero value otherwise.
 func (o *Domain) GetProjectId() int32 {
-	if o == nil {
+	if o == nil || IsNil(o.ProjectId) {
 		var ret int32
 		return ret
 	}
-
-	return o.ProjectId
+	return *o.ProjectId
 }
 
-// GetProjectIdOk returns a tuple with the ProjectId field value
+// GetProjectIdOk returns a tuple with the ProjectId field value if set, nil otherwise
 // and a boolean to check if the value has been set.
 func (o *Domain) GetProjectIdOk() (*int32, bool) {
-	if o == nil {
+	if o == nil || IsNil(o.ProjectId) {
 		return nil, false
 	}
-	return &o.ProjectId, true
+	return o.ProjectId, true
 }
 
-// SetProjectId sets field value
+// HasProjectId returns a boolean if a field has been set.
+func (o *Domain) HasProjectId() bool {
+	if o != nil && !IsNil(o.ProjectId) {
+		return true
+	}
+
+	return false
+}
+
+// SetProjectId gets a reference to the given int32 and assigns it to the ProjectId field.
 func (o *Domain) SetProjectId(v int32) {
-	o.ProjectId = v
+	o.ProjectId = &v
 }
 
-// GetInSection returns the InSection field value
+// GetInSection returns the InSection field value if set, zero value otherwise.
 func (o *Domain) GetInSection() int32 {
-	if o == nil {
+	if o == nil || IsNil(o.InSection) {
 		var ret int32
 		return ret
 	}
-
-	return o.InSection
+	return *o.InSection
 }
 
-// GetInSectionOk returns a tuple with the InSection field value
+// GetInSectionOk returns a tuple with the InSection field value if set, nil otherwise
 // and a boolean to check if the value has been set.
 func (o *Domain) GetInSectionOk() (*int32, bool) {
-	if o == nil {
+	if o == nil || IsNil(o.InSection) {
 		return nil, false
 	}
-	return &o.InSection, true
+	return o.InSection, true
 }
 
-// SetInSection sets field value
+// HasInSection returns a boolean if a field has been set.
+func (o *Domain) HasInSection() bool {
+	if o != nil && !IsNil(o.InSection) {
+		return true
+	}
+
+	return false
+}
+
+// SetInSection gets a reference to the given int32 and assigns it to the InSection field.
 func (o *Domain) SetInSection(v int32) {
-	o.InSection = v
+	o.InSection = &v
 }
 
 // GetDnsEngaged returns the DnsEngaged field value
@@ -316,8 +330,12 @@ func (o Domain) ToMap() (map[string]interface{}, error) {
 	toSerialize := map[string]interface{}{}
 	toSerialize["id"] = o.Id
 	toSerialize["domain"] = o.Domain
-	toSerialize["project_id"] = o.ProjectId
-	toSerialize["in_section"] = o.InSection
+	if !IsNil(o.ProjectId) {
+		toSerialize["project_id"] = o.ProjectId
+	}
+	if !IsNil(o.InSection) {
+		toSerialize["in_section"] = o.InSection
+	}
 	toSerialize["dns_engaged"] = o.DnsEngaged
 	if !IsNil(o.SectionMessage) {
 		toSerialize["section_message"] = o.SectionMessage
@@ -341,8 +359,6 @@ func (o *Domain) UnmarshalJSON(data []byte) (err error) {
 	requiredProperties := []string{
 		"id",
 		"domain",
-		"project_id",
-		"in_section",
 		"dns_engaged",
 	}
 
